Migrate actix-rt to std::future
This has several issues, the current implementation pulls whole of tokio 0.2, which
should be replaced by tokio-runtime crate, once its ready. It also adds
a single unsafe block , that performs pinning of boxed futures for spawning
them on an executor

--- a/actix-rt/Cargo.toml
+++ b/actix-rt/Cargo.toml
@@ -19,9 +19,13 @@ path = "src/lib.rs"
 
 [dependencies]
 actix-threadpool = "0.1.1"
-futures = "0.1.25"
-tokio-current-thread = "0.1"
-tokio-executor = "0.1.5"
-tokio-reactor = "0.1.7"
-tokio-timer = "0.2.8"
+futures = { package = "futures-preview", version  = "0.3.0-alpha.18" }
+
+
+# TODO: Replace this with dependency on tokio-runtime once it is ready
+tokio = { version = "0.2.0-alpha.4" }
+tokio-timer = "=0.3.0-alpha.4"
+tokio-executor = "=0.2.0-alpha.4"
+tokio-net = "=0.2.0-alpha.4"
+
 copyless = "0.1.4"
