Migrate actix-codec to std::future
Current implementation is rough, with a generous sprinkling of unsafe for pinning and unpining
of references. This should be replaced with some macros, either pin-utils, or something custom
to actix libraries, since there is a lot of different future impls that need to be upgraded

--- a/actix-codec/Cargo.toml
+++ b/actix-codec/Cargo.toml
@@ -19,7 +19,7 @@ path = "src/lib.rs"
 
 [dependencies]
 bytes = "0.4.12"
-futures = "0.1.24"
-tokio-io = "0.1.12"
-tokio-codec = "0.1.1"
+futures = { package = "futures-preview", version  = "0.3.0-alpha.18" }
+tokio-io = "0.2.0-alpha.4"
+tokio-codec = "0.2.0-alpha.4"
 log = "0.4"
