--- a/actix-service/Cargo.toml
+++ b/actix-service/Cargo.toml
@@ -27,4 +27,5 @@ futures = { package = "futures-preview", version = "0.3.0-alpha.18" }
 pin-project = "0.4.0-alpha.11"
 
 [dev-dependencies]
+tokio = "0.2.0-alpha.4"
 actix-rt = "0.2"
