--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ members = [
 actix-service = "0.4.0"
 actix-codec = "0.1.1"
 actix-rt = "0.2.0"
-actix-server = { version="0.5.0", features=["ssl"] }
+actix-server = { version="0.6.0", features=["ssl"] }
 env_logger = "0.6"
 futures = "0.1.25"
 openssl = "0.10"
@@ -45,3 +45,5 @@ tokio-openssl = "0.3"
 [patch.crates-io]
 actix-rt = { path = "./actix-rt"}
 actix-service  = { path = "./actix-service"}
+actix-server = { path = "./actix-server" }
+actix-server-config = { path = "./actix-server-config" }
