--- a/actix-server-config/Cargo.toml
+++ b/actix-server-config/Cargo.toml
@@ -34,6 +34,6 @@ futures = { package = "futures-preview", version = "0.3.0-alpha.18" }
 tokio = "0.2.0-alpha.4"
 
 tokio-openssl = { version="0.4.0-alpha.4", optional = true }
-rustls = { version = "0.15.2", optional = true }
-tokio-rustls = { version = "0.9.1", optional = true }
+rustls = { version = "0.16.0", optional = true }
+tokio-rustls = { version = "0.12.0-alpha.2", optional = true }
 #tokio-uds = { version="0.3.0-alpha.1", optional = true }
