--- a/actix-test-server/Cargo.toml
+++ b/actix-test-server/Cargo.toml
@@ -39,9 +39,9 @@ actix-server-config = "0.1.0"
 
 log = "0.4"
 net2 = "0.2"
-futures = "0.1"
-tokio-tcp = "0.1"
-tokio-reactor = "0.1"
+futures = { package = "futures-preview", version = "0.3.0-alpha.18"}
+tokio-io = "0.2.0-alpha.4"
+tokio-net = "0.2.0-alpha.4"
 
 # native-tls
 native-tls = { version="0.2", optional = true }
@@ -50,10 +50,10 @@ native-tls = { version="0.2", optional = true }
 openssl = { version="0.10", optional = true }
 
 #rustls
-rustls = { version = "^0.15", optional = true }
-tokio-rustls = { version = "^0.9", optional = true }
-webpki = { version = "0.19", optional = true }
-webpki-roots = { version = "0.16", optional = true }
+rustls = { version = "^0.16", optional = true }
+tokio-rustls = { version = "^0.12.0-alpha.2", optional = true }
+webpki = { version = "0.21", optional = true }
+webpki-roots = { version = "0.17", optional = true }
 
 [dev-dependencies]
 actix-service = "0.4.0"
