--- a/actix-server-config/Cargo.toml
+++ b/actix-server-config/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/lib.rs"
 features = ["ssl", "rust-tls", "uds"]
 
 [features]
-default = []
+default = ["ssl", "rustls" ]
 
 # openssl
 ssl = ["tokio-openssl"]
@@ -26,13 +26,14 @@ ssl = ["tokio-openssl"]
 rust-tls = ["rustls", "tokio-rustls"]
 
 # unix domain sockets
-uds = ["tokio-uds"]
+# TODO: FIXME
+uds = [] # ["tokio-uds"]
 
 [dependencies]
-futures = "0.1.25"
-tokio-io = "0.1.12"
-tokio-tcp = "0.1"
-tokio-openssl = { version="0.3.0", optional = true }
-rustls = { version = "0.15.2", optional = true }
-tokio-rustls = { version = "0.9.1", optional = true }
-tokio-uds = { version="0.2.5", optional = true }
+futures = { package = "futures-preview", version = "0.3.0-alpha.18" }
+tokio = "0.2.0-alpha.4"
+
+tokio-openssl = { version="0.4.0-alpha.4", optional = true }
+rustls = { version = "0.16.0", optional = true }
+tokio-rustls = { version = "0.12.0-alpha.2", optional = true }
+#tokio-uds = { version="0.3.0-alpha.1", optional = true }
