--- a/actix-server/Cargo.toml
+++ b/actix-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-server"
-version = "0.6.1"
+version = "0.6.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix server - General purpose tcp server"
 keywords = ["network", "framework", "async", "futures"]
@@ -33,7 +33,7 @@ ssl = ["openssl", "tokio-openssl", "actix-server-config/ssl"]
 rust-tls = ["rustls", "tokio-rustls", "webpki", "webpki-roots", "actix-server-config/rust-tls"]
 
 # uds
-uds = ["mio-uds", "tokio-uds", "actix-server-config/uds"]
+# uds = ["mio-uds", "tokio-uds", "actix-server-config/uds"]
 
 [dependencies]
 actix-rt = "0.2.2"
@@ -45,30 +45,29 @@ num_cpus = "1.0"
 
 mio = "0.6.19"
 net2 = "0.2"
-futures = "0.1"
+futures = { package = "futures-preview", version = "0.3.0-alpha.18" }
 slab = "0.4"
-tokio-io = "0.1"
-tokio-tcp = "0.1"
-tokio-timer = "0.2.8"
-tokio-reactor = "0.1"
-tokio-signal = "0.2"
+tokio = "0.2.0-alpha.4"
+tokio-io = "0.2.0-alpha.4"
+tokio-net = { version = "0.2.0-alpha.4", features = ["signal"] }
+tokio-timer = "0.3.0-alpha.4"
 
 # unix domain sockets
 mio-uds = { version="0.6.7", optional = true }
-tokio-uds = { version="0.2.5", optional = true }
+#tokio-uds = { version="0.2.5", optional = true }
 
 # native-tls
 native-tls = { version="0.2", optional = true }
 
 # openssl
 openssl = { version="0.10", optional = true }
-tokio-openssl = { version="0.3", optional = true }
+tokio-openssl = { version="0.4.0-alpha.4", optional = true }
 
 # rustls
-rustls = { version = "0.15.2", optional = true }
-tokio-rustls = { version = "0.9.1", optional = true }
-webpki = { version = "0.19", optional = true }
-webpki-roots = { version = "0.16", optional = true }
+rustls = { version = "0.16.0", optional = true }
+tokio-rustls = { version = "0.12.0-alpha.2", optional = true }
+webpki = { version = "0.21", optional = true }
+webpki-roots = { version = "0.17", optional = true }
 
 [dev-dependencies]
 bytes = "0.4"
