--- a/actix-utils/Cargo.toml
+++ b/actix-utils/Cargo.toml
@@ -22,9 +22,12 @@ actix-service = "0.4.1"
 actix-codec = "0.1.2"
 bytes = "0.4"
 either = "1.5.2"
-futures = "0.1.25"
-tokio-timer = "0.2.8"
-tokio-current-thread = "0.1.4"
+
+futures = { package = "futures-preview", version = "0.3.0-alpha.18" }
+pin-project = "0.4.0-alpha.11"
+tokio-timer = "0.3.0-alpha.4"
+tokio-executor = "0.2.0-alpha.4"
+
 log = "0.4"
 
 [dev-dependencies]
