--- a/actix-utils/Cargo.toml
+++ b/actix-utils/Cargo.toml
@@ -24,7 +24,7 @@ bytes = "0.4"
 either = "1.5.2"
 
 futures = { package = "futures-preview", version = "0.3.0-alpha.18" }
-pin-project = "0.4.0-alpha.11"
+pin-project = "0.4.2"
 tokio-timer = "0.3.0-alpha.4"
 tokio-executor = "0.2.0-alpha.4"
 
