--- a/actix-connect/Cargo.toml
+++ b/actix-connect/Cargo.toml
@@ -39,21 +39,22 @@ actix-utils = "0.4.0"
 actix-rt = "0.2.5"
 derive_more = "0.15"
 either = "1.5.2"
-futures = "0.1.25"
+futures = { package = "futures-preview", version = "0.3.0-alpha.18" }
 http = { version = "0.1.17", optional = true }
 log = "0.4"
-tokio-tcp = "0.1.3"
-tokio-current-thread = "0.1.5"
+tokio-net = { version = "0.2.0-alpha.4"}
+tokio-executor = "=0.2.0-alpha.4"
 trust-dns-resolver = { version="0.11.0", default-features = false }
 
+pin-project = "0.4.0-alpha.11"
 # openssl
 openssl = { version="0.10", optional = true }
 tokio-openssl = { version="0.3", optional = true }
 
 #rustls
-rustls = { version = "0.15.2", optional = true }
-tokio-rustls = { version = "0.9.1", optional = true }
-webpki = { version = "0.19", optional = true }
+rustls = { version = "0.16.0", optional = true }
+tokio-rustls = { version = "0.12.0-alpha.2", optional = true }
+webpki = { version = "0.21", optional = true }
 
 [dev-dependencies]
 bytes = "0.4"
