--- a/actix-ioframe/Cargo.toml
+++ b/actix-ioframe/Cargo.toml
@@ -22,8 +22,8 @@ actix-service = "0.4.1"
 actix-codec = "0.1.2"
 bytes = "0.4"
 either = "1.5.2"
-futures = "0.1.25"
-tokio-current-thread = "0.1.4"
+futures = { package = "futures-preview", version = "0.3.0-alpha.18" }
+tokio-executor = "0.2.0-alpha.4"
 log = "0.4"
 
 [dev-dependencies]
