--- a/actix-connect/Cargo.toml
+++ b/actix-connect/Cargo.toml
@@ -42,6 +42,7 @@ either = "1.5.2"
 futures = { package = "futures-preview", version = "0.3.0-alpha.19" }
 http = { version = "0.1.17", optional = true }
 log = "0.4"
+tokio = "0.2.0-alpha.6"
 tokio-net = { version = "0.2.0-alpha.6"}
 tokio-executor = "=0.2.0-alpha.6"
 trust-dns-resolver = { version="0.11.0", default-features = false }
@@ -53,11 +54,7 @@ tokio-openssl = { version="0.3", optional = true }
 
 #rustls
 rustls = { version = "0.16.0", optional = true }
-<<<<<<< HEAD
-tokio-rustls = { version = "0.10.0", optional = true }
-=======
 tokio-rustls = { version = "0.12.0-alpha.2", optional = true }
->>>>>>> Migrate actix-connect to std::future with impl_trait_bindings requirement
 webpki = { version = "0.21", optional = true }
 
 [dev-dependencies]
